# eMotion

./: .gitmodules  LICENSE  README.md
docs/: misc.txt
media/: emotion_demo
src/emotion_launcher/: CMakeLists.txt  package.xml
src/emotion_launcher/launch/: emotion.launch  emotion.rviz
src/face_detector/: CMakeLists.txt  package.xml
src/face_detector/src/: face_detector
src/imu_wrapper/: CMakeLists.txt  package.xml
src/imu_wrapper/src/: imu_serial
src/imu_wrapper/srv/: GetAcceleration.srv
src/jetson_nano_csi_cam/: CMakeLists.txt  package.xml
src/jetson_nano_csi_cam/src/: .jetson_nano_cam.swp  jetson_nano_cam
src/rviz_animated_view_controller/: CMakeLists.txt
src/rviz_animated_view_controller/include/rviz_animated_view_controller/: rviz_animated_view_controller.h
src/rviz_animated_view_controller/launch/: demo.launch
src/rviz_animated_view_controller/src/: rviz_animated_view_controller.cpp
src/scene_builder/: CMakeLists.txt  package.xml
src/scene_builder/src/: eMotion_scene_builder
