<?xml version="1.0"?>
<package format="2">
    <name>face_detector</name>
    <version>1.0.0</version>
    <description>Face detector based on DNN</description>
    <maintainer email="leonardo.lai@live.com">Leonardo Lai</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>

</package>
