<?xml version="1.0"?>
<package format="2">
  <name>imu_wrapper</name>
  <version>1.0.0</version>
  <description>Wrapper for eMotion IMU</description>
  <maintainer email="leonardo.lai@live.com">Leonardo Lai</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
